@@ -1,3 +1,10 @@
+2001-07-10  John Kirkland  <jpk@bl.org>
+
+	* Added a "keywords" feature.  When you edit captions, you now
+	  have the ability to enter photo keywords that the search engine
+	  will use when searching for images.
+
+
 2001-07-10  Bharat Mediratta  <bharat@menalto.com>
 
 	* Turned off magic_quotes_runtime in the config wizard so that you
